--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <meta name="description" content="Documentation and reference library for ZURB Foundation. JavaScript, CSS, components, grid and more."/>
 <meta name="author" content="ZURB, inc. ZURB network also includes zurb.com"/>
 <meta name="copyright" content="ZURB, inc. Copyright (c) 2015"/>
-<link rel="stylesheet" href="../assets/css/templates/foundation.css"/>
-<script src="../assets/js/modernizr.js"></script>
+<link rel="stylesheet" href="http://foundation.zurb.com/assets/css/templates/foundation.css"/>
+<script src="http://foundation.zurb.com/assets/js/modernizr.js"></script>
 </head>
 <body>
 <div class="row">
@@ -154,13 +154,13 @@ erat, eleifend sed pulvinar ac. Suspendisse ultrices ornare tempor. Aenean eget 
   ('__proto__' in {} ? 'zepto' : 'jquery') +
   '.js><\/script>')
   </script>
-<script src="../../assets/js/jquery.js"></script>
-<script src="js/foundation.min.js"></script>
+<script src="http://foundation.zurb.com/assets/js/jquery.js"></script>
+<script src="http://foundation.zurb.com/assets/js/foundation.min.js"></script>
 <script>
     $(document).foundation();
   </script>
-<script src="../assets/js/templates/jquery.js"></script>
-<script src="../assets/js/templates/foundation.js"></script>
+<script src="http://foundation.zurb.com/assets/js/templates/jquery.js"></script>
+<script src="http://foundation.zurb.com/assets/js/templates/foundation.js"></script>
 <script>
       $(document).foundation();
 
