--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <meta name="author" content="ZURB, inc. ZURB network also includes zurb.com"/>
 <meta name="copyright" content="ZURB, inc. Copyright (c) 2015"/>
 <link rel="stylesheet" href="http://foundation.zurb.com/assets/css/templates/foundation.css"/>
+<link rel="stylesheet" href="foundation.css"/>
 <script src="http://foundation.zurb.com/assets/js/modernizr.js"></script>
 </head>
 <body>
