--- a/index2.html
+++ b/index2.html
@@ -15,6 +15,18 @@
 		<link rel="stylesheet" type="text/css" href="css/dragdealer.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
   		<script src="js/modernizr.custom.js"></script>
+  		
+  		<!-- Google Web Fonts API -->
+    
+		      <!-- H1 (Main Title), H2 (Main Subtitle) -->
+		      <link href='http://fonts.googleapis.com/css?family=Questrial:400' rel='stylesheet' type='text/css'>
+		      <!-- H3 (Section Titles), H4 (Section Subtitles) -->
+		      <link href='http://fonts.googleapis.com/css?family=Raleway:400|Roboto+Slab:100' rel='stylesheet' type='text/css'>
+		      <!-- H5, Paragraph (longer reading) -->
+		        <link href='http://fonts.googleapis.com/css?family=Varela' rel='stylesheet' type='text/css'>
+		      <!-- H6 (Disclaimer, Notes) -->
+		        <link href='http://fonts.googleapis.com/css?family=Montserrat|Varela|Roboto' rel='stylesheet' type='text/css'>
+
 	</head>
 	<body>
 		<div class="container">
