add site-title + site-subtitle font family CSS
Futura. None other.

--- a/index2.html
+++ b/index2.html
@@ -27,6 +27,38 @@
 		      <!-- H6 (Disclaimer, Notes) -->
 		        <link href='http://fonts.googleapis.com/css?family=Montserrat|Varela|Roboto' rel='stylesheet' type='text/css'>
 
+		<style>
+		#site-title {
+		        /* AURORA */
+		        font-family: 'Futura', 'Futura-Medium', 'Century Gothic', 'AppleGothic', "URW Gothic L", 'Avant Garde', sans-serif;
+		        color: #8d6f00;
+		        font-size: 4em;
+		        font-weight: bold;
+		        text-transform: uppercase;
+		        text-align: center;
+		        letter-spacing: .5em;
+		        padding: 0.15em 0 0 0.75em;
+		        margin: 0;
+		      }
+	      	
+	      	h2#site-subtitle {
+	        /* Aurora slogan */
+	        font-family: 'Futura', 'Futura-Medium', 'Century Gothic', 'AppleGothic', "URW Gothic L", 'Avant Garde', sans-serif;
+	        color: black;
+	        font-weight: bold;
+	        text-transform: uppercase;
+	        text-align: center;
+	        letter-spacing: .21em;
+	        word-spacing: .25em;
+	        line-height: 1.75em; */
+	        /* padding-left: 3%; */
+	        margin: 0;
+	        padding-bottom: 2em;
+	        padding-top: 1em;
+	        word-break: word-break;
+	      }	
+			
+		</style>
 	</head>
 	<body>
 		<div class="container">
