update .slide h2 font-family

--- a/index2.html
+++ b/index2.html
@@ -28,7 +28,7 @@
 	        <link href='http://fonts.googleapis.com/css?family=Montserrat|Varela|Roboto' rel='stylesheet' type='text/css'>
 
 		<style>
-		h1, h2, #site-title {
+		h1, h2, h3 /* #site-title */ {
 		        /* AURORA */
 		        font-family: 'Futura', 'Futura-Medium', 'Century Gothic', 'AppleGothic', "URW Gothic L", 'Avant Garde', sans-serif;
 		        color: #8d6f00;
@@ -41,21 +41,20 @@
 		        margin: 0;
 		      }
 	      	
-	      	h2, #site-subtitle {
-		        /* Aurora slogan */
-		        font-family: 'Futura', 'Futura-Medium', 'Century Gothic', 'AppleGothic', "URW Gothic L", 'Avant Garde', sans-serif;
-		        color: black;
-		        font-weight: bold;
-		        text-transform: uppercase;
-		        text-align: center;
-		        letter-spacing: .21em;
-		        word-spacing: .25em;
-		        line-height: 1.75em; */
-		        /* padding-left: 3%; */
-		        margin: 0;
-		        padding-bottom: 2em;
-		        padding-top: 1em;
-		        word-break: word-break;
+	      	.slide h2, /* #site-subtitle */ {
+		    /* Aurora slogan */
+		    font-family: 'Futura', 'Futura-Medium', 'Century Gothic', 'AppleGothic', "URW Gothic L", 'Avant Garde', sans-serif;
+		    color: rgba(0,0,0,.25);
+		    font-weight: 400;
+		    text-transform: uppercase;
+		    text-align: center;
+		    letter-spacing: .2em;
+		    font-size: 4em;
+		    line-height: 1.75em;
+		    /* padding-left: 3%; */
+		    margin: 0;
+		    padding-bottom: .5em;
+		    padding-top: 1em;
 	      	}	
 			
 		</style>
