add content in section headers
and section content

--- a/index2.html
+++ b/index2.html
@@ -90,58 +90,61 @@
 						<!-- SECTION HEADER 01 -->
 						<div class="slide" data-content="content-1">
 							<div class="img-wrap">
-							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S01&w=1280&h=850&fm=png" alt="img1"/>
+							<!-- img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S01&w=1280&h=850&fm=png" alt="img1"/ -->
+							<img src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" alt="img1"/ >
 							</div>
-							<h2>S01<span>ispum lorem</span></h2>
+							<!-- h2>AURORA<span>Enchantment Throught Data</span></h2 -->
 							<button class="content-switch">Read more</button>
 						</div>
 
 						<!-- SECTION HEADER 02 -->
 						<div class="slide" data-content="content-2">
-							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/></div>
-							<h2>S02<span>ipsum</span></h2>
+							<div class="img-wrap">
+							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/>
+							</div>
+							<h2>AURORA<span>Enchantment Throught Data</span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
 						<!-- SECTION HEADER 03 -->
 						<div class="slide" data-content="content-3">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S03&w=1280&h=850&fm=png" alt="img3"/></div>
-							<h2>S03<span>text</span></h2>
+							<h2>About<span>Project Aurora</span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
 						<!-- SECTION HEADER 04 -->
 						<div class="slide" data-content="content-4">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S04&w=1280&h=850&fm=png" alt="img4"/></div>
-							<h2>S04<span>text</span></h2>
+							<h2>Vision<span>Magic of the UX</span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
 						<!-- SECTION HEADER 05 -->
 						<div class="slide" data-content="content-5">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S05&w=1280&h=850&fm=png" alt="img5"/></div>
-							<h2>S05<span>Text</span></h2>
+							<h2>Super Tech<span>Technical Specs</span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
 						<!-- SECTION HEADER 06 -->
 						<div class="slide" data-content="content-6">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S06&w=1280&h=850&fm=png" alt="img6"/></div>
-							<h2>S06<span>TEXT</span></h2>
+							<h2>Experience<span>The Journey Walkthrough</span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
 						<!-- SECTION HEADER 07 -->
 						<div class="slide" data-content="content-7">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S07&w=1280&h=850&fm=png" alt="img7"/></div>
-							<h2>S07<span>TEXT</span></h2>
+							<h2>Partnerships + Media<span><hr /></span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
 						<!-- SECTION HEADER 08 -->
 						<div class="slide" data-content="content-8">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S08&w=1280&h=850&fm=png" alt="img8"/></div>
-							<h2>S08 <span>Text</span></h2>
+							<h2>Be Part of the New Data Medium <span>Form</span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 					</div>
@@ -153,19 +156,20 @@
 				<section class="pages">
 
 					<!-- SECTION CONTENT 01 -->
-					<div class="content" data-content="content-1">
+					<!-- div class="content" data-content="content-1">
 						<h2>S01 <span>OVERVIEW TEXT</span></h2>
 						<p>It was not child's play tackling those horses. Some of the kind-hearted station folk in the backblocks had sent down some wild warrigals of the West; bucking brumbies that beat the band; old outlaws off the grass that the station hands could never master. 
 						</p>
 						<p class="related">
 							<a href="#top">Home</a>
 						</p>
-					</div>
+					</div -->
 
 					<!-- SECTION CONTENT 02 -->
 					<div class="content" data-content="content-2">
-						<h2>S02 <span>OVERVIEW TEXT</span></h2>
-						<p>Passing by the rugged Socotra, we soon sighted the mountainous southern coast of Arabia, and by midday on January 20 we were focussing our binoculars on the picturesque gate of the Indian Ocean, Aden. Curious it is how Britain has secured all the great strategical points of the world—Gibraltar, Suez, Aden, Singapore, Thursday Island, the Cape of Good Hope, and the rest. 
+						<h2>About Us <span><hr /></span></h2>
+						<p>
+							Add contact info + people involved
 						</p>
 						<p class="related">
 							<a href="#top">Home</a>
@@ -174,8 +178,13 @@
 
 					<!-- SECTION CONTENT 03 -->
 					<div class="content" data-content="content-3">
-						<h2>S03 <span>OVERVIEW TEXT</span></h2>
-						<p>I am living Egypt, living.... Your pyramids and your mosques and your old Nile can talk to me of things long past and gone, and I shall listen with interest to what they have to say, but I would rather be a living dog of an Egyptian than the dead lion of an Egyptian king—I would rather be a moving, talking native dressed in garish clothes than a Prince of the House of Rameses, sans eyes, sans ears, sans tongue, in the shrivelled brown form of a mummy.
+						<h2>Project Aurora <span>What is it?</span></h2>
+						<p>
+						What is Aurora.
+						Why you should care.
+						How does it work.
+						Who are the stakeholders.
+						When does it do what it does.
 						</p>
 						<p class="related">
 							<a href="#top">home</a>
@@ -184,8 +193,13 @@
 
 					<!-- SECTION CONTENT 04 -->
 					<div class="content" data-content="content-4">
-						<h2>S04 <span>OVERVIEW TEXT</span></h2>
-						<p>One could not help contrasting this large force from Australia and New Zealand—a force that was to be doubled and trebled ere long—with the little force of 500 men which William Bede Dalley, Australian Orator and Patriot, sent from New South Wales to the Sudan just thirty years before. 
+						<h2>Vision <span>OVERVIEW TEXT</span></h2>
+						<p>
+						How does it work.
+						Who are the stakeholders.
+						When does it do what it does.
+						
+						The Magic.
 						</p>
 						<p class="related">
 							<a href="#top">Home</a>
@@ -194,8 +208,13 @@
 
 					<!-- SECTION CONTENT 05 -->
 					<div class="content" data-content="content-5">
-						<h2>S05 <span>OVERVIEW TEXT</span></h2>
-						<p>You had heard of the Plagues of Egypt; we have seen them, and are able to vouch for the authenticity of the Scriptures. Instead of hot cross buns, Easter brought us a plague of locusts. </p>
+						<h2>Tech Specs <span>OVERVIEW TEXT</span></h2>
+						<p>
+						List hardware
+						Smart materials
+						Product features + capabilities
+						Energy
+						</p>
 						<p class="related">
 							<a href="#top">Home</a>
 						</p>
@@ -204,7 +223,7 @@
 					<!-- SECTION CONTENT 06 -->
 					<div class="content" data-content="content-6">
 						<h2>S06 <span>OVERVIEW TEXT</span></h2>
-						<p>One night stands out—a gorgeous night—a carnival in honour and aid of brave little Serbia. Kipling says that "East is east and west is west, and never the twain shall meet"; but he surely has not seen a Venetian carnival in Cairo, with its intermingling of the progressive Occident and the picturesque Orient. 
+						<p>One night stands out—a gorgeous night—a carnival in honour and aid of brave little Serbia. 
 						</p>
 						<p class="related">
 							<a href="#top">Home</a>
@@ -213,8 +232,8 @@
 
 					<!-- SECTION CONTENT 07 -->
 					<div class="content" data-content="content-7">
-						<h2>S07 <span>OVERVIEW TEXT</span></h2>
-						<p>But even a plague of locusts does not last for ever—and Egypt does. </p>
+						<h2>Partnerships + Media <span>Client + Profile Enhancing List</span></h2>
+						<p>logos. gallery page</p>
 						<p class="related">
 							<a href="#top">Home</a>
 						</p>
@@ -222,8 +241,9 @@
 
 					<!-- SECTION CONTENT 08 -->
 					<div class="content" data-content="content-8">
-						<h2>S08 <span>OVERVIEW TEXT</span></h2>
-						<p>The casualties among the officers were tremendous—brave men who led Australia's soldiers in that awful charge! And among the bravest of them were the young officers from the Duntroon Military College that stands amid delightful country surroundings near the capital of Federated Australia that is now in the making in the Mother State of New South Wales. 
+						<h2>S08 <span>Call-to-action</span></h2>
+						<p>This form:
+						http://tympanus.net/codrops/2014/07/30/fullscreen-form-interface/
 						</p>
 						<p class="related">
 							<a href="#top">Home</a>
