--- a/index2.html
+++ b/index2.html
@@ -93,7 +93,7 @@
 							<!-- img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S01&w=1280&h=850&fm=png" alt="img1"/ -->
 							<img src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" alt="img1"/ >
 							</div>
-							<!-- h2>AURORA<span>Enchantment Throught Data</span></h2 -->
+							<h2>AURORA<span>Enchantment Throught Data</span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
