update SH01 + SH02
h2 issues

--- a/index2.html
+++ b/index2.html
@@ -14,6 +14,9 @@
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/dragdealer.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
+		
+		<link rel="stylesheet" type="text/css" href="main.css" />
+		
   		<script src="js/modernizr.custom.js"></script>
   		
   		<!-- Google Web Fonts API -->
@@ -93,7 +96,8 @@
 							<!-- img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S01&w=1280&h=850&fm=png" alt="img1"/ -->
 							<img src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" alt="img1"/ >
 							</div>
-							<h2>AURORA<span>Enchantment Throught Data</span></h2>
+							<h2>AURORA</h2>
+							<span>Enchantment Throught Data</span>
 							<button class="content-switch">Read more</button>
 						</div>
 
@@ -102,7 +106,8 @@
 							<div class="img-wrap">
 							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/>
 							</div>
-							<h2>AURORA<span>Enchantment Throught Data</span></h2>
+							<h2>AURORA</h2>
+							<h3>Enchantment Throught Data</h3>
 							<button class="content-switch">Read more</button>
 						</div>
 
