update section header 01 + 02

--- a/index2.html
+++ b/index2.html
@@ -97,7 +97,6 @@
 							<img src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" alt="img1"/ >
 							</div>
 							<h2>AURORA</h2>
-							<span>Enchantment Throught Data</span>
 							<button class="content-switch">Read more</button>
 						</div>
 
@@ -106,8 +105,7 @@
 							<div class="img-wrap">
 							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/>
 							</div>
-							<h2>AURORA</h2>
-							<h3>Enchantment Throught Data</h3>
+							<h2><quote>Enchantment Throught Data</quote></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
