--- a/index2.html
+++ b/index2.html
@@ -105,7 +105,7 @@
 							<div class="img-wrap">
 							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/>
 							</div>
-							<h2><quote>Enchantment Throught Data</quote></h2>
+							<h2 class="slogan-quote">"Enchantment Through Data"</h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
