--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" type="text/css" href="css/dragdealer.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
 		
-		<link rel="stylesheet" type="text/css" href="main.css" />
+		<link rel="stylesheet" type="text/css" href="https://connieleung.github.io/aurora/main.css" />
 		
   		<script src="js/modernizr.custom.js"></script>
   		
