--- a/index2.html
+++ b/index2.html
@@ -77,7 +77,7 @@
 			<!-- INSTRUCTIONS -->
 			<div id="overlay" class="overlay">
 				<div class="info">
-					<h2>Demo interactions</h2>
+					<h2>Aurora <span>site interaction guide</span></h2>
 					<span class="info-drag">Drag Sliders</span>
 					<span class="info-keys">Use Arrows</span>
 					<span class="info-switch">Switch view</span>
