--- a/index2.html
+++ b/index2.html
@@ -78,8 +78,8 @@
 			<div id="overlay" class="overlay">
 				<div class="info">
 					<h2>Aurora</h2>
-					<h3>site interaction guide</h3>
-					<span>site interaction guide</span>
+					<h4>site interaction guide</h4>
+					<!-- span>site interaction guide</span -->
 					<span class="info-drag">Drag Sliders</span>
 					<span class="info-keys">Use Arrows</span>
 					<span class="info-switch">Switch view</span>
