add instruction h4 class
<h4 class="overlay-instructions-about">site interaction guide</h4>

--- a/index2.html
+++ b/index2.html
@@ -78,7 +78,7 @@
 			<div id="overlay" class="overlay">
 				<div class="info">
 					<h2>Aurora</h2>
-					<h4>site interaction guide</h4>
+					<h4 class="overlay-instructions-about">site interaction guide</h4>
 					<!-- span>site interaction guide</span -->
 					<span class="info-drag">Drag Sliders</span>
 					<span class="info-keys">Use Arrows</span>
