add secondary class name in section header div
SH#

--- a/index2.html
+++ b/index2.html
@@ -93,7 +93,7 @@
 					<div class="handle">
 
 						<!-- SECTION HEADER 01 -->
-						<div class="slide" data-content="content-1">
+						<div class="slide, SH1" data-content="content-1">
 							<div class="img-wrap">
 							<!-- img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S01&w=1280&h=850&fm=png" alt="img1"/ -->
 							<img src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" alt="img1"/ >
@@ -103,7 +103,7 @@
 						</div>
 
 						<!-- SECTION HEADER 02 -->
-						<div class="slide" data-content="content-2">
+						<div class="slide, SH2" data-content="content-2">
 							<div class="img-wrap">
 							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/>
 							</div>
@@ -112,42 +112,42 @@
 						</div>
 
 						<!-- SECTION HEADER 03 -->
-						<div class="slide" data-content="content-3">
+						<div class="slide, SH3" data-content="content-3">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S03&w=1280&h=850&fm=png" alt="img3"/></div>
 							<h2>About<span>Project Aurora</span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
 						<!-- SECTION HEADER 04 -->
-						<div class="slide" data-content="content-4">
+						<div class="slide, SH4" data-content="content-4">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S04&w=1280&h=850&fm=png" alt="img4"/></div>
 							<h2>Vision<span>Magic of the UX</span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
 						<!-- SECTION HEADER 05 -->
-						<div class="slide" data-content="content-5">
+						<div class="slide, SH5" data-content="content-5">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S05&w=1280&h=850&fm=png" alt="img5"/></div>
 							<h2>Super Tech<span>Technical Specs</span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
 						<!-- SECTION HEADER 06 -->
-						<div class="slide" data-content="content-6">
+						<div class="slide, SH6" data-content="content-6">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S06&w=1280&h=850&fm=png" alt="img6"/></div>
 							<h2>Experience<span>The Journey Walkthrough</span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
 						<!-- SECTION HEADER 07 -->
-						<div class="slide" data-content="content-7">
+						<div class="slide, SH7" data-content="content-7">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S07&w=1280&h=850&fm=png" alt="img7"/></div>
 							<h2>Partnerships + Media<span><hr /></span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
 						<!-- SECTION HEADER 08 -->
-						<div class="slide" data-content="content-8">
+						<div class="slide, SH8" data-content="content-8">
 							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S08&w=1280&h=850&fm=png" alt="img8"/></div>
 							<h2>Be Part of the New Data Medium <span>Form</span></h2>
 							<button class="content-switch">Read more</button>
