--- a/index2.html
+++ b/index2.html
@@ -95,11 +95,12 @@
 						<!-- SECTION HEADER 01 -->
 						<div class="slide SH1" data-content="content-1">
 							<div class="img-wrap">
-							<!-- img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S01&w=1280&h=850&fm=png" alt="img1"/ -->
-							<img src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" alt="img1"/ >
+							<img src="https://placeholdit.imgix.net/~text?txtsize=40&amp;bg=00F3EB&amp;txt=S01&amp;w=1280&amp;h=850&amp;fm=png" alt="img1"/ >
+							<!-- img src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" alt="img1"/ -->
 							</div>
 							<h2>AURORA</h2>
-							<button class="content-switch">Read more</button>
+							<button class="content-switch feathericon-arrow-down">Read more</button>
+							<button class="content-switch icon-arrow-right">Read more</button>
 						</div>
 
 						<!-- SECTION HEADER 02 -->
@@ -107,7 +108,7 @@
 							<div class="img-wrap">
 							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/>
 							</div>
-							<h2 class="slogan-quote">"Enchantment Through Data"</h2>
+							<h2 class="slogan-quote">"Data Enchanted"</h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
