--- a/index2.html
+++ b/index2.html
@@ -16,6 +16,7 @@
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
 		
 		<link rel="stylesheet" type="text/css" href="https://connieleung.github.io/aurora/main.css" />
+		<link rel="stylesheet" type="text/css" href="https://github.com/connieleung/aurora/blob/gh-pages/main.css" />
 		
   		<script src="js/modernizr.custom.js"></script>
   		
@@ -95,8 +96,8 @@
 						<!-- SECTION HEADER 01 -->
 						<div class="slide SH1" data-content="content-1">
 							<div class="img-wrap">
-							<img src="https://placeholdit.imgix.net/~text?txtsize=40&amp;bg=00F3EB&amp;txt=S01&amp;w=1280&amp;h=850&amp;fm=png" alt="img1"/ >
-							<!-- img src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" alt="img1"/ -->
+							<!-- img src="https://placeholdit.imgix.net/~text?txtsize=40&amp;bg=00F3EB&amp;txt=S01&amp;w=1280&amp;h=850&amp;fm=png" alt="img1"/ -->
+							<img src="https://cloud.githubusercontent.com/assets/4642277/11171667/52893a68-8bc3-11e5-9aa7-fcbdb96385d7.png />
 							</div>
 							<h2>AURORA</h2>
 							<button class="content-switch feathericon-arrow-down">Read more</button>
