SH01 skeleton - tag closure resolve

--- a/index2.html
+++ b/index2.html
@@ -97,7 +97,7 @@
 						<div class="slide SH1" data-content="content-1">
 							<div class="img-wrap">
 							<!-- img src="https://placeholdit.imgix.net/~text?txtsize=40&amp;bg=00F3EB&amp;txt=S01&amp;w=1280&amp;h=850&amp;fm=png" alt="img1"/ -->
-							<img src="https://cloud.githubusercontent.com/assets/4642277/11171667/52893a68-8bc3-11e5-9aa7-fcbdb96385d7.png />
+							<img src="https://cloud.githubusercontent.com/assets/4642277/11171667/52893a68-8bc3-11e5-9aa7-fcbdb96385d7.png" />
 							</div>
 							<h2>AURORA</h2>
 							<button class="content-switch feathericon-arrow-down">Read more</button>
