--- a/index2.html
+++ b/index2.html
@@ -100,7 +100,7 @@
 							<img class="aurora-skeleton-viz-img-2" src="https://cloud.githubusercontent.com/assets/4642277/11176707/6bb89836-8c0d-11e5-8925-98469435e8ad.png" />
 							</div>
 							<h2>AURORA</h2>
-							<button class="content-switch feathericon-arrow-down">Read more</button>
+							<!-- button class="content-switch feathericon-arrow-down">Read more</button -->
 							<button class="content-switch icon-arrow-right">Read more</button>
 						</div>
 
