update SH04 + SC03/04
<img class="aurora-skeleton-viz-img-inside-02c" src="https://cloud.githubusercontent.com/assets/4642277/11177516/14ec1c92-8c14-11e5-9d6a-a8a312fef9cb.jpeg" alt="img4"/ >

SC03/04
- text content

--- a/index2.html
+++ b/index2.html
@@ -109,7 +109,7 @@
 							<div class="img-wrap">
 							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/>
 							</div>
-							<h2 class="slogan-quote">Data Enchanted</h2>
+							<h2 class="slogan-quote"><span>Data</span><span>Enchanted</span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
@@ -122,8 +122,11 @@
 
 						<!-- SECTION HEADER 04 -->
 						<div class="slide SH4" data-content="content-4">
-							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S04&w=1280&h=850&fm=png" alt="img4"/></div>
-							<h2>Vision<span>Magic of the UX</span></h2>
+							<div class="img-wrap">
+							<!-- img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S04&w=1280&h=850&fm=png" alt="img4"/ -->
+							<img class="aurora-skeleton-viz-img-inside-02c" src="https://cloud.githubusercontent.com/assets/4642277/11177516/14ec1c92-8c14-11e5-9d6a-a8a312fef9cb.jpeg" alt="img4"/ >
+							</div>
+							<h2>Concept<span>Magic of the UX</span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
@@ -185,13 +188,9 @@
 
 					<!-- SECTION CONTENT 03 -->
 					<div class="content" data-content="content-3">
-						<h2>Project Aurora <span>What is it?</span></h2>
+						<h2>Background<span>Information</span></h2>
 						<p>
-						What is Aurora.
-						Why you should care.
-						How does it work.
-						Who are the stakeholders.
-						When does it do what it does.
+						Project Aurora aims to attract, inform and provide people with security, ultimately enhancing the user's daily life. The installation will attract people’s attention through changes in light patterns and shapes. Aurora retains their attention through interactive activities, such as apps, games, etc. As more than an artistic installation, Aurora non-intrusively informs the community by displaying/broadcasting popular events, data and news. Its centric location near subways and bus stops enhances commuters’ routines through tangible features such as electric charging and WiFi stations.   Aurora is aimed at improving the safety of its surrounding area by lighting up the neighbourhood during night and providing a safe walking route.  People will feel safer walking towards Aurora and features such as map display, bus routes and nearby police station will improve the quality of the neighbourhood it is installed in.
 						</p>
 						<p class="related">
 							<a href="#top">home</a>
@@ -200,13 +199,13 @@
 
 					<!-- SECTION CONTENT 04 -->
 					<div class="content" data-content="content-4">
-						<h2>Vision <span>OVERVIEW TEXT</span></h2>
+						<h2>Product <span>Direction</span></h2>
 						<p>
-						How does it work.
-						Who are the stakeholders.
-						When does it do what it does.
-						
-						The Magic.
+						The goals is to create a new medium platform for marketing and advertising where a new level of engagement among target users can experience. This medium will aid new forms of marketing awareness, education with data, information and player participation engagement and ultimately, drive in retail.
+
+Every design feature in this product has the intention of delivering content-rich material. From giving the user power to activate a curated gamified storyline to creating an intimate, memory-lasting event of a user’s day or helping a user’s daily routine and making it better. The goal is to nurture pain points in one’s daily life brighten the stresses of one’s day. 
+
+The product has the potential to evolve into something that would resemble a personal planetarium. For example the ability to activate a series of features through pressure-sensitive floor and panel surfaces, be able to view a selfie post after viewing a projected trailer (think roller coaster selfies), and a wireless charging station from the energy collected with solar panels.  
 						</p>
 						<p class="related">
 							<a href="#top">Home</a>
