update SH02 + SH01
img swap

--- a/index2.html
+++ b/index2.html
@@ -97,7 +97,7 @@
 						<div class="slide SH1" data-content="content-1">
 							<div class="img-wrap">
 							<!-- img src="https://placeholdit.imgix.net/~text?txtsize=40&amp;bg=00F3EB&amp;txt=S01&amp;w=1280&amp;h=850&amp;fm=png" alt="img1"/ -->
-							<img class="aurora-skeleton-viz-img-2" src="https://cloud.githubusercontent.com/assets/4642277/11176707/6bb89836-8c0d-11e5-8925-98469435e8ad.png" />
+							<img class="aurora-skeleton-viz-img-1" src="https://cloud.githubusercontent.com/assets/4642277/11176707/6bb89836-8c0d-11e5-8925-98469435e8ad.png" />
 							</div>
 							<h2>AURORA</h2>
 							<!-- button class="content-switch feathericon-arrow-down">Read more</button -->
@@ -107,7 +107,8 @@
 						<!-- SECTION HEADER 02 -->
 						<div class="slide SH2" data-content="content-2">
 							<div class="img-wrap">
-							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/>
+							<!-- img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/ -->
+							<img class="aurora-skeleton-viz-img-2" src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" />
 							</div>
 							<h2 class="slogan-quote"><span>Data</span><span>Enchanted</span></h2>
 							<button class="content-switch">Read more</button>
@@ -115,7 +116,8 @@
 
 						<!-- SECTION HEADER 03 -->
 						<div class="slide SH3" data-content="content-3">
-							<div class="img-wrap"><img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S03&w=1280&h=850&fm=png" alt="img3"/></div>
+							<div class="img-wrap">
+							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S03&w=1280&h=850&fm=png" alt="img3"/></div>
 							<h2>About<span>Project Aurora</span></h2>
 							<button class="content-switch">Read more</button>
 						</div>
