--- a/index2.html
+++ b/index2.html
@@ -126,7 +126,7 @@
 						<div class="slide SH4" data-content="content-4">
 							<div class="img-wrap">
 							<!-- img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S04&w=1280&h=850&fm=png" alt="img4"/ -->
-							<img class="aurora-skeleton-viz-img-inside-02c" src="https://cloud.githubusercontent.com/assets/4642277/11177516/14ec1c92-8c14-11e5-9d6a-a8a312fef9cb.jpeg" alt="img4"/ >
+							<!-- img class="aurora-skeleton-viz-img-inside-02c" src="https://cloud.githubusercontent.com/assets/4642277/11177516/14ec1c92-8c14-11e5-9d6a-a8a312fef9cb.jpeg" alt="img4"/ -->
 							</div>
 							<h2>Concept<span>Magic of the UX</span></h2>
 							<button class="content-switch">Read more</button>
