--- a/index2.html
+++ b/index2.html
@@ -107,8 +107,8 @@
 						<!-- SECTION HEADER 02 -->
 						<div class="slide SH2" data-content="content-2">
 							<div class="img-wrap">
-							<!-- img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/ -->
-							<img class="aurora-skeleton-viz-img-2" src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" />
+							<img class="aurora-skeleton-viz-img-2" src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/ >
+							<!-- img class="aurora-skeleton-viz-img-2" src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" / -->
 							</div>
 							<h2 class="slogan-quote"><span>Data</span><span>Enchanted</span></h2>
 							<button class="content-switch">Read more</button>
@@ -126,7 +126,7 @@
 						<div class="slide SH4" data-content="content-4">
 							<div class="img-wrap">
 							<!-- img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S04&w=1280&h=850&fm=png" alt="img4"/ -->
-							<!-- img class="aurora-skeleton-viz-img-inside-02c" src="https://cloud.githubusercontent.com/assets/4642277/11177516/14ec1c92-8c14-11e5-9d6a-a8a312fef9cb.jpeg" alt="img4"/ -->
+							<img class="aurora-skeleton-viz-img-inside-02c" src="https://cloud.githubusercontent.com/assets/4642277/11177516/14ec1c92-8c14-11e5-9d6a-a8a312fef9cb.jpeg" alt="img4"/ >
 							</div>
 							<h2>Concept<span>Magic of the UX</span></h2>
 							<button class="content-switch">Read more</button>
