--- a/index2.html
+++ b/index2.html
@@ -110,7 +110,7 @@
 							<img class="aurora-skeleton-viz-img-2" src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S02&w=1280&h=850&fm=png" alt="img2"/ >
 							<!-- img class="aurora-skeleton-viz-img-2" src="http://biomath.math.nd.edu/compbio/PhoneNetwork/continental0p001.gif" / -->
 							</div>
-							<h2 class="slogan-quote"><span>Data</span><span>Enchanted</span></h2>
+							<h2 class="slogan-quote">Making Data Enchanting</h2>
 							<button class="content-switch">Read more</button>
 						</div>
 
@@ -194,8 +194,9 @@
 						<p>
 						Project Aurora aims to attract, inform and provide people with security, ultimately enhancing the user's daily life. The installation will attract people’s attention through changes in light patterns and shapes. Aurora retains their attention through interactive activities, such as apps, games, etc. As more than an artistic installation, Aurora non-intrusively informs the community by displaying/broadcasting popular events, data and news. Its centric location near subways and bus stops enhances commuters’ routines through tangible features such as electric charging and WiFi stations.   Aurora is aimed at improving the safety of its surrounding area by lighting up the neighbourhood during night and providing a safe walking route.  People will feel safer walking towards Aurora and features such as map display, bus routes and nearby police station will improve the quality of the neighbourhood it is installed in.
 						</p>
+						<button class="content-switch">Read more</button>
 						<p class="related">
-							<a href="#top">home</a>
+							<button class="content-switch">Read more</button>
 						</p>
 					</div>
 
