--- a/index2.html
+++ b/index2.html
@@ -184,7 +184,7 @@
 							Add contact info + people involved
 						</p>
 						<p class="related">
-							<a href="#top">Home</a>
+							<button class="content-switch">Read more</button>
 						</p>
 					</div>
 
@@ -210,6 +210,7 @@ Every design feature in this product has the intention of delivering content-ric
 
 The product has the potential to evolve into something that would resemble a personal planetarium. For example the ability to activate a series of features through pressure-sensitive floor and panel surfaces, be able to view a selfie post after viewing a projected trailer (think roller coaster selfies), and a wireless charging station from the energy collected with solar panels.  
 						</p>
+						<button class="content-switch">Read more</button>
 						<p class="related">
 							<a href="#top">Home</a>
 						</p>
