--- a/index2.html
+++ b/index2.html
@@ -115,7 +115,7 @@
 						</div>
 
 						<!-- SECTION HEADER 03 -->
-						<div class="slide SH3" data-content="content-3">
+						<div class="slide SH3" id="top" data-content="content-3">
 							<div class="img-wrap">
 							<img src="https://placeholdit.imgix.net/~text?txtsize=40&bg=885500&txt=S03&w=1280&h=850&fm=png" alt="img3"/></div>
 							<h2>About<span>Project Aurora</span></h2>
@@ -180,9 +180,9 @@
 					<!-- SECTION CONTENT 02 -->
 					<div class="content" data-content="content-2">
 						<h2>About Us <span><hr /></span></h2>
-						<p>
-							Add contact info + people involved
-						</p>
+						<section class="content SC02">
+							info@wearhacks.com
+						</section>
 						<p class="related">
 							<button class="content-switch">Read more</button>
 						</p>
@@ -191,12 +191,14 @@
 					<!-- SECTION CONTENT 03 -->
 					<div class="content" data-content="content-3">
 						<h2>Background<span>Information</span></h2>
+						<section class="content SC03">
 						<p>
 						Project Aurora aims to attract, inform and provide people with security, ultimately enhancing the user's daily life. The installation will attract people’s attention through changes in light patterns and shapes. Aurora retains their attention through interactive activities, such as apps, games, etc. As more than an artistic installation, Aurora non-intrusively informs the community by displaying/broadcasting popular events, data and news. Its centric location near subways and bus stops enhances commuters’ routines through tangible features such as electric charging and WiFi stations.   Aurora is aimed at improving the safety of its surrounding area by lighting up the neighbourhood during night and providing a safe walking route.  People will feel safer walking towards Aurora and features such as map display, bus routes and nearby police station will improve the quality of the neighbourhood it is installed in.
 						</p>
+						</section>
 						<button class="content-switch">Read more</button>
 						<p class="related">
-							<button class="content-switch">Read more</button>
+							<a href="#top"><span class="icon-arrow-top"></span></a>
 						</p>
 					</div>
 
