SC02 <p> and #top link

--- a/index2.html
+++ b/index2.html
@@ -180,12 +180,12 @@
 					<!-- SECTION CONTENT 02 -->
 					<div class="content" data-content="content-2">
 						<h2>About Us <span><hr /></span></h2>
-						<section class="content SC02">
+						<p class="content SC02">
 							info@wearhacks.com
-						</section>
-						<p class="related">
-							<button class="content-switch">Read more</button>
 						</p>
+						<div class="back-top">
+							<a href="#top"><span class="icon-arrow-top"></span></a>
+						</div>
 					</div>
 
 					<!-- SECTION CONTENT 03 -->
