--- a/index2.html
+++ b/index2.html
@@ -180,25 +180,22 @@
 					<!-- SECTION CONTENT 02 -->
 					<div class="content" data-content="content-2">
 						<h2>About Us <span><hr /></span></h2>
-						<p class="content SC02">
+						<p class="SC02">
 							info@wearhacks.com
 						</p>
-						<div class="back-top">
-							<a href="#top"><span class="icon-arrow-top"></span></a>
-						</div>
+						<p class="related">
+							<a href="#top">Home</a>
+						</p>
 					</div>
 
 					<!-- SECTION CONTENT 03 -->
 					<div class="content" data-content="content-3">
 						<h2>Background<span>Information</span></h2>
-						<section class="content SC03">
-						<p>
+						<p class="SC03">
 						Project Aurora aims to attract, inform and provide people with security, ultimately enhancing the user's daily life. The installation will attract people’s attention through changes in light patterns and shapes. Aurora retains their attention through interactive activities, such as apps, games, etc. As more than an artistic installation, Aurora non-intrusively informs the community by displaying/broadcasting popular events, data and news. Its centric location near subways and bus stops enhances commuters’ routines through tangible features such as electric charging and WiFi stations.   Aurora is aimed at improving the safety of its surrounding area by lighting up the neighbourhood during night and providing a safe walking route.  People will feel safer walking towards Aurora and features such as map display, bus routes and nearby police station will improve the quality of the neighbourhood it is installed in.
 						</p>
-						</section>
-						<button class="content-switch">Read more</button>
 						<p class="related">
-							<a href="#top"><span class="icon-arrow-top"></span></a>
+							<a href="#top">Home</a>
 						</p>
 					</div>
 
@@ -212,7 +209,6 @@ Every design feature in this product has the intention of delivering content-ric
 
 The product has the potential to evolve into something that would resemble a personal planetarium. For example the ability to activate a series of features through pressure-sensitive floor and panel surfaces, be able to view a selfie post after viewing a projected trailer (think roller coaster selfies), and a wireless charging station from the energy collected with solar panels.  
 						</p>
-						<button class="content-switch">Read more</button>
 						<p class="related">
 							<a href="#top">Home</a>
 						</p>
