--- a/index2.html
+++ b/index2.html
@@ -18,6 +18,9 @@
 		<link rel="stylesheet" type="text/css" href="https://connieleung.github.io/aurora/main.css" />
 		<link rel="stylesheet" type="text/css" href="https://github.com/connieleung/aurora/blob/gh-pages/main.css" />
 		
+		<!-- font awesome -->
+		<link rel="stylesheet" href="https://fortawesome.github.io/Font-Awesome/assets/font-awesome/css/font-awesome.css">
+		<script src="https://use.fonticons.com/ffe176a3.js"></script>
   		<script src="js/modernizr.custom.js"></script>
   		
   		<!-- Google Web Fonts API -->
@@ -184,7 +187,7 @@
 							info@wearhacks.com
 						</p>
 						<p class="related">
-							<a href="#top">Home</a>
+							<a href="#top"><i class="fa fa-caret-up"></i></a>
 						</p>
 					</div>
 
